# naxone

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  RELEASE_NOTES_0.2.3.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.6.md  RELEASE_NOTES_0.5.7.md  RELEASE_NOTES_v0.5.12.md  RELEASE_NOTES_v0.5.15.md  RELEASE_NOTES_v0.5.16.md  latest.json  release.env.local.example
crates/naxone-adapters/: Cargo.toml
crates/naxone-adapters/src/: lib.rs
crates/naxone-adapters/src/config/: fs_config.rs
crates/naxone-adapters/src/package/: cache.rs  composite.rs  installer.rs  manifest.rs  mod.rs  packages.json  post_install.rs  scanner.rs  standalone.rs  system_scanner.rs  tool_detect.rs
crates/naxone-adapters/src/package/sources/: github_mirror.rs  php_official.rs
crates/naxone-adapters/src/platform/: dirs.rs  global_php.rs  linux.rs  mod.rs  ssl_cert.rs  user_env.rs  windows.rs
crates/naxone-adapters/src/process/: linux.rs  mod.rs  windows.rs
crates/naxone-adapters/src/template/: mod.rs
crates/naxone-adapters/src/vhost/: mod.rs
crates/naxone-adapters/tests/: integration_test.rs  phase1_scanner_tests.rs
crates/naxone-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/naxone-tauri/capabilities/: default.json
crates/naxone-tauri/frontend/: index.html  package-lock.json  package.json  vite.config.ts  wdio.conf.ts
crates/naxone-tauri/frontend/src/: App.vue
crates/naxone-tauri/frontend/src/__mocks__/: tauri.ts
crates/naxone-tauri/frontend/src/__tests__/: Dashboard.test.ts  Vhosts.test.ts
crates/naxone-tauri/frontend/src/assets/: global.css
crates/naxone-tauri/frontend/src/components/: ConfirmDialog.vue  LogDrawer.vue  SelectMenu.vue  StoreCard.vue  ToastContainer.vue
crates/naxone-tauri/frontend/src/composables/: useAppInfo.ts  useTextareaTab.ts  useToast.ts
crates/naxone-tauri/frontend/src/views/: Dashboard.vue  GlobalEnv.vue  HostsEditor.vue  ServiceConfig.vue  Settings.vue  SoftwareStore.vue  Vhosts.vue
crates/naxone-tauri/frontend/tests/: helpers.ts
crates/naxone-tauri/frontend/tests/specs/: activity-log.spec.ts  crud-https.spec.ts  fixes.spec.ts  interactions.spec.ts  log-drawer.spec.ts  pie-install-real.spec.ts  screenshots.spec.ts  smoke.spec.ts  ssl-deep.spec.ts  template-fail-ui.spec.ts  template-init.spec.ts  template-real-user.spec.ts  v058-suite.spec.ts  visibility.spec.ts
crates/naxone-tauri/icons/: icon.icns
crates/naxone-tauri/nsis/: installer-hooks.nsh
crates/naxone-tauri/src/: main.rs  state.rs
crates/naxone-tauri/src/commands/: hosts.rs  logger.rs  mod.rs  package.rs  php.rs  pie.rs  port.rs  service.rs  service_config.rs  settings.rs  strangers.rs  template.rs  tools.rs  updater.rs  utils.rs  vhost.rs
crates/ruststudy-adapters/: Cargo.toml
crates/ruststudy-adapters/src/config/: fs_config.rs  mod.rs
crates/ruststudy-adapters/src/package/: cache.rs  composite.rs  installer.rs  manifest.rs  mod.rs  packages.json  proxy.rs  scanner.rs  standalone.rs  system_scanner.rs
crates/ruststudy-adapters/src/package/sources/: github_mirror.rs  mod.rs  php_official.rs
crates/ruststudy-adapters/src/platform/: global_php.rs  linux.rs  mod.rs  ssl_cert.rs  windows.rs
crates/ruststudy-adapters/src/process/: linux.rs  windows.rs
crates/ruststudy-adapters/src/template/: mod.rs
crates/ruststudy-adapters/src/vhost/: mod.rs
crates/ruststudy-adapters/tests/: integration_test.rs  phase1_scanner_tests.rs
crates/ruststudy-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/ruststudy-tauri/capabilities/: default.json
crates/ruststudy-tauri/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
crates/ruststudy-tauri/frontend/src/: App.vue  main.ts
crates/ruststudy-tauri/frontend/src/__tests__/: Dashboard.test.ts  Vhosts.test.ts
crates/ruststudy-tauri/frontend/src/assets/: global.css
crates/ruststudy-tauri/frontend/src/components/: LogDrawer.vue  SelectMenu.vue  StoreCard.vue  ToastContainer.vue
crates/ruststudy-tauri/frontend/src/composables/: useAppInfo.ts
crates/ruststudy-tauri/frontend/src/views/: Dashboard.vue  HostsEditor.vue  ServiceConfig.vue  Settings.vue  SoftwareStore.vue  Vhosts.vue
crates/ruststudy-tauri/nsis/: installer-hooks.nsh
crates/ruststudy-tauri/src/: main.rs  state.rs
crates/ruststudy-tauri/src/commands/: hosts.rs  logger.rs  mod.rs  package.rs  php.rs  service.rs  service_config.rs  settings.rs  strangers.rs  updater.rs  utils.rs  vhost.rs
scripts/: _clean_vhosts.py  process_logo.py  release_gitee.py  (+1 more)
(+35 files in other folders)
