[workspace]
members = [
    "crates/naxone-core",
    "crates/naxone-adapters",
    "crates/naxone-tauri",
]
resolver = "2"

[workspace.package]
version = "0.5.9"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
