[package]
name = "naxone-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
naxone-core = { path = "../naxone-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
# Software store: download + unzip
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "gzip", "json"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"
# SSL 自签证书（本地开发 HTTPS）
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
time = "0.3"

[target.'cfg(windows)'.dependencies]
# 读取 HKCU\Software\Microsoft\Windows\CurrentVersion\Internet Settings
# 以自动发现 Clash/V2ray 等"系统代理"开关的代理地址
winreg = "0.52"
# 进程信息查询（PID/内存）。Windows 上走 NtQuerySystemInformation，
# 不经过 WMI，避免 tasklist.exe 触发 WmiPrvSE.exe 高 CPU。
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
