[package]
name = "naxone-tauri"
version.workspace = true
edition.workspace = true

[[bin]]
name = "NaxOne"
path = "src/main.rs"

[dependencies]
naxone-core = { path = "../naxone-core" }
naxone-adapters = { path = "../naxone-adapters" }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-single-instance = "2"
chrono = "0.4.44"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
