[package]
name = "ruststudy-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
ruststudy-core = { path = "../ruststudy-core" }
ruststudy-adapters = { path = "../ruststudy-adapters" }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.0"
chrono = "0.4.44"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
